--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Create poses for Minecraft armor stands in a breeze! Free, fast, open source.">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="js/colpick.css">
+    <link rel="stylesheet" href="jscolpick.css">
     <link rel="icon" type="image/png" href="images/icon.png">
 
     <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
